--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         rel="stylesheet"
         href="css/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="css/config.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="config.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -309,8 +309,8 @@
     </footer>
 
 
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="swiper-bundle.min.js"></script>
+    <script src="script.js"></script>
     <script>
         const swiper = new Swiper('.exhibitionSwiper', {
             slidesPerView: 3,
