--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         rel="stylesheet"
         href="css/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="config.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/config.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
