--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
             <div class="container">
                 <div class="navbar-wrapper">
                     <ul class="nav-links">
-                        <li class="nav-link"><a href="/visit.html">Visit</a></li>
-                        <li class="nav-link"><a href="/evolution.html">Exhibitions</a></li>
-                        <li class="nav-link"><a href="/visit.html">For Kids</a></li>
-                        <li class="nav-link"><a href="/visit.html">For Schools & Educators</a></li>
-                        <li class="nav-link"><a href="/events.html">Events</a></li>
-                        <li class="nav-link"><a href="/visit.html">About</a></li>
+                        <li class="nav-link"><a href="visit.html">Visit</a></li>
+                        <li class="nav-link"><a href="evolution.html">Exhibitions</a></li>
+                        <li class="nav-link"><a href="visit.html">For Kids</a></li>
+                        <li class="nav-link"><a href="visit.html">For Schools & Educators</a></li>
+                        <li class="nav-link"><a href="events.html">Events</a></li>
+                        <li class="nav-link"><a href="visit.html">About</a></li>
                     </ul>
 
                     <button class="nav-toggle">
@@ -64,12 +64,12 @@
         </div>
         <div class="wrapper">
             <ul class="nav-links">
-                <li class="nav-link"><a href="/visit.html">Visit</a></li>
-                <li class="nav-link"><a href="/evolution.html">Exhibitions</a></li>
-                <li class="nav-link"><a href="/visit.html">For Kids</a></li>
-                <li class="nav-link"><a href="/visit.html">For Schools & Educators</a></li>
-                <li class="nav-link"><a href="/events.html">Events</a></li>
-                <li class="nav-link"><a href="/visit.html">About</a></li>
+                <li class="nav-link"><a href="visit.html">Visit</a></li>
+                <li class="nav-link"><a href="evolution.html">Exhibitions</a></li>
+                <li class="nav-link"><a href="visit.html">For Kids</a></li>
+                <li class="nav-link"><a href="visit.html">For Schools & Educators</a></li>
+                <li class="nav-link"><a href="events.html">Events</a></li>
+                <li class="nav-link"><a href="visit.html">About</a></li>
             </ul>
         </div>
     </div>
